<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sky_75opacity"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >
            
            <ProgressBar
                android:id="@+id/registerProgrresBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/timerTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/EnterDetalisTxt"
                android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/registerFirstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/fNameHint"
        android:inputType="textPersonName" >

    
    </EditText>

    <EditText
        android:id="@+id/regiserLastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/lNameHint"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/registerEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/emailHint"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/registerPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/phoneHint"
        android:inputType="phone" />

    <EditText
        android:id="@+id/registerId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/idHint"
        android:inputType="number" />

    <EditText
        android:id="@+id/registerAdrress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/addressHint"
        android:inputType="textPostalAddress" />

    <EditText
        android:id="@+id/RegisterDOB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/BirthDayHint"
        android:inputType="date" />

    <EditText
        android:id="@+id/registerCreditCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/creditHint"
        android:inputType="textPassword" />
    
    <EditText
        android:id="@+id/registerPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/PassworsHint"
        android:inputType="textPassword" />
        
    <EditText
        android:id="@+id/RegisterReEnterPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/ConfirmPasswordHint"
        android:inputType="textPassword" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/CleanButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:text="@string/cleanBtnTxt" />

        <Button
            android:id="@+id/registerButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.29"
            android:text="@string/signin_RegisterTxt" />
    </LinearLayout>
  		  
        </LinearLayout>
    </ScrollView>

    

</LinearLayout>
