

    <TabHost
        android:id="@+id/tabhost"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/sky_75opacity"
        xmlns:android="http://schemas.android.com/apk/res/android"
    >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
            </TabWidget>

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <LinearLayout
                    android:id="@+id/tab1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:animateLayoutChanges="true"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/choseFoodTxt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/choseFoodTXT"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/green" />

                    <RadioGroup
                        android:id="@+id/radioGroupFood"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center" >

                    <RadioButton
                        android:id="@+id/radioButtonMeat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/meatTXT" />

                    <RadioButton
                        android:id="@+id/radioButtonFish"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fishTXT" />

                    <RadioButton
                        android:id="@+id/radioButtonVegi"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/vegiTXT" />

                    <RadioButton
                        android:id="@+id/radioButtonKosher"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/kosherTXT" />
                    
 </RadioGroup>
                    <ImageView
                        android:id="@+id/imageViewFood"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/abc_ab_share_pack_holo_light" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/tab2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:animateLayoutChanges="true"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/chosseSeatTxt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/choseSeatTXT"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="horizontal" >

                        <ImageView
                            android:id="@+id/imageViewWindow"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="start"
                            android:src="@drawable/window_image" />

                        <ImageView
                            android:id="@+id/imageViewHaly"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="end"
                            android:src="@drawable/haly_image" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="horizontal" >

                        <RadioGroup
                            android:id="@+id/radioGroupChair"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center" >

                            <RadioButton
                                android:id="@+id/radioButtonWindow"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/windowTXT"
                                android:textSize="@dimen/medium_text_size" />

                            <RadioButton
                                android:id="@+id/radioButtonHaly"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/halyTXT"
                                android:textSize="@dimen/medium_text_size" />

                        </RadioGroup>

                    </LinearLayout>

                   

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/tab3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:animateLayoutChanges="true"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/choseClassTXT"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/choseClassTXT"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <RatingBar
                        android:id="@+id/ratingBarClass"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:max="@integer/three"
                        android:numStars="@integer/three"
                        android:progress="@integer/one" />

                    <TextView
                        android:id="@+id/classTVpourchese"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/emptyTxt"
                        android:textColor="@color/navy" />

                    <CheckBox
                        android:id="@+id/weightCHB"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/weghitTXT" />

                </LinearLayout>




            </FrameLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right|end" >

            <TextView
                android:id="@+id/costTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <Button
                android:id="@+id/ConfirBuyBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/buyTicketTxt" />

        </LinearLayout>

   </TabHost>
 